--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
-.pio
+echo "node_modules/
+.env
 .vscode
-.vscode/.browse.c_cpp.db*
-.vscode/c_cpp_properties.json
-.vscode/launch.json
-.vscode/ipch
+.pio
+.DS_Store
+*.log
+dist/
+build/
+*.tmp
+*.temp" >> .gitignore
+
